# ferri

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.toml  flake.nix
ferri-cli/: Cargo.toml
ferri-cli/src/: main.rs
ferri-main/: Cargo.toml
ferri-main/src/: lib.rs
ferri-main/src/ap/: activity.rs  http.rs  mod.rs  post.rs  request_queue.rs  user.rs
ferri-main/src/config/: mod.rs
ferri-main/src/federation/: http.rs  inbox.rs  mod.rs  outbox.rs  request_queue.rs
ferri-main/src/types/: ap.rs  api.rs  convert.rs  db.rs  get.rs  make.rs  mod.rs
ferri-main/src/types_rewrite/: convert.rs  fetch.rs  get.rs  make.rs  mod.rs
ferri-server/: Cargo.toml
ferri-server/src/: ap.rs  cors.rs  http_wrapper.rs  lib.rs
ferri-server/src/endpoints/: custom.rs  inbox.rs  mod.rs  oauth.rs  old_code.rs  user.rs  well_known.rs
ferri-server/src/endpoints/admin/: mod.rs
ferri-server/src/endpoints/api/: apps.rs  instance.rs  mod.rs  preferences.rs  search.rs  status.rs  timeline.rs  user.rs
ferri-server/src/types/: activity.rs  content.rs  instance.rs  mod.rs  oauth.rs  webfinger.rs
ferri-server/templates/: _layout.html  authorize.html  index.html
migrations/: 20250410112126_add_actor.sql  20250410112325_add_follow.sql  20250410121119_add_user.sql  20250410182845_add_post.sql  20250411125138_add_activity.sql  20250423182916_add_auth.sql  20250504102047_add_attachment.sql
