[workspace]
resolver = "2"
members = [ "ferri-cli","ferri-main", "ferri-server"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.219"
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros" ], default-features = false }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"