[workspace]
resolver = "2"
members = [ "ferri-cli","ferri-main", "ferri-server"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = "1.0.219"
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "macros" ], default-features = false }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.40"
rand = "0.8"
thiserror = "2.0.12"
serde_json = "1.0.140"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry", "smallvec"] }