[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = "1.0.140"
sqlx = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

base64 = "0.22.1"
rsa = { version = "0.9.8", features = ["sha2"] }
rand = "0.8"
url = "2.5.4"
