[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

base64 = "0.22.1"
rsa = { version = "0.9.8", features = ["sha2"] }
url = "2.5.4"
tokio = "1.44.2"
