[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
main = { path = "../ferri-main/" }
rocket = { workspace = true }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
reqwest = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

url = "2.5.4"