[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
main = { path = "../ferri-main/" }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
url = "2.5.4"

rocket = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }